--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,14 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.left {
+  float: left;
+  margin: 10px 10px 10px 0;
+  width: 300px;
+}
+.right {
+  float: right;
+  margin: 10px 0 10px 10px;
+  width: 300px;
+}
